
Here an overview of the relevant additions:

1. fgsl_complex_math: the legacy complex type has been removed;
   interface added: fgsl_complex_polar
2. mappings of the gsl_linalg routines
   - gsl_linalg_sv_{solve2, lssolve}
   - gsl_linalg_qr_lssolvem_r, gsl_linalg_complex_qr_lssolvem_r
   - gsl_linalg_complex_qr_qhmat_r
   - gsl_linalg_qr_ud_lssvx,
   - gsl_linalg_qr_ur_{lssolve, lssvx, qtvec}
   
   
Fixes:

-  the examples now all use the standard output unit for writes to stdout; 
   newunit= is used for dynamically creating unit values otherwise.
-  unit testing now returns exit status 1 on error, assuring that 
   failures are signalled.
 



Changes in 1.6.0 (by R Bader):
~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
This release introduces support for gsl 2.7. An overview:

1. added gsl_spmatrix interfaces norm1, dense_add, dens_sub
2. added gsl_linalg_QL interfaces decomp, unpack
3. added gsl_multilarge_linear_matrix_ptr and gsl_multilarge_linear_rhs_ptr interfaces
4. added large dense linear regression example program
5. added gsl_linalg_cholesky_band interfaces for solvem, svxm, scale, scale_apply
6. added gsl_linalg_QR_UR, gsl_linalg_QR_UU, gsl_linalg_QR_UZ, gsl_linalg_QR_UD
   interfaces
7. added gsl_multifit_linear_lcurvature interface
8. added gsl_spline2d_eval_extrap interface
9. bug fixes for missing interfaces and status handling, *fprintf revision, 
   removal of __FILE__ (issue #36)
10. gsl_linalg_LU_band remains unsupported, due to its use of gsl_vector_uint
11. added a copy of the GSL 2.7 reference pdf to the doc folder.

Changes in 1.5.0 (by R Bader):
~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
This release introduces support for gsl 2.6. An overview:

1. added linalg LQ and LDLT routines
2. augmented the legacy triangular matrix interface by the
   better designed one currently documented.
   Note: the old interface will be eventually removed.
3. added interfaces for banded systems (cholesky, LDLT)
4. added missing calls from spmatrix module (note: some